[tool.poetry]
name = "project2"
version = "0.1.0"
description = ""
authors = ["Qamarudeen Muhammad <crescentgroup2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dbt-core = "^1.1.0"
dbt-snowflake = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
